<resources>
    <string name="app_name">Contact Manager</string>
    <string name="action_settings">Settings</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="saveButton">Save</string>
    <string name="deleteButton">Delete</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_display_maps">Map</string>
</resources>
